Update MenuServiceTest.java